Stylise /(global)/NavbarClient.tsx

--- a/src/app/(global)/styles/Navbar.module.css
+++ b/src/app/(global)/styles/Navbar.module.css
@@ -1,14 +1,23 @@
 .burgerMenu {
     display: none;
-    background-color: #3d0d64;
-    color: white;
+    font-family: 'Inconsolata', monospace;
+    background-color: #FFEEC4;
+    color: #171520;
     padding: 30px;
-    padding-top: 70px;
+    padding-top: 20px;
+    top: 40px;
     position: fixed;
     right: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     line-height: 40px;
   }
+
+.posts {
+    color: #480404;
+    line-height: 35px;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+}
