--- a/src/app/(global)/styles/Navbar.module.css
+++ b/src/app/(global)/styles/Navbar.module.css
@@ -6,7 +6,7 @@
     padding: 30px;
     padding-top: 20px;
     top: 40px;
-    position: fixed;
+    position: absolute;
     right: 0;
     width: 100%;
     display: flex;
