--- a/src/app/(global)/styles/Navbar.module.css
+++ b/src/app/(global)/styles/Navbar.module.css
@@ -1,25 +1,25 @@
 .burgerMenu {
-    display: none;
-    font-family: 'Inconsolata', monospace;
-    background-color: #FFEEC4;
-    color: #171520;
-    padding: 30px;
-    padding-top: 20px;
-    top: 40px;
-    position: absolute;
-    right: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    line-height: 40px;
-    border-bottom: 4px solid #760608;
-    z-index: 1;
-  }
+  display: none;
+  font-family: "Inconsolata", monospace;
+  background-color: #ffeec4;
+  color: #171520;
+  padding: 30px;
+  padding-top: 20px;
+  top: 40px;
+  position: absolute;
+  right: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  line-height: 40px;
+  border-bottom: 4px solid #760608;
+  z-index: 1;
+}
 
 .posts {
-    color: #480404;
-    line-height: 35px;
-    padding-left: 10px;
-    display: flex;
-    flex-direction: column;
+  color: #480404;
+  line-height: 35px;
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
 }
